# rust-vk-scrapper

./: .env.example  .env.test  Cargo.toml  Makefile  README.md  docker-compose.yml
migrations/: 20250225_000001_create_tables.sql
src/: db_commands.rs  endpoints.rs  main.rs  models.rs  tasks.rs  utils.rs  vk_api.rs
tests/: get_polling_tests.rs  post_polling_tests.rs  tasks_tests.rs  test_utils.rs
