[package]
name = "vk_scrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
reqwest = "0.13.2"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "migrate", "chrono"] }
tokio-cron-scheduler = "0.15.1"
once_cell = "1.19"
uuid = "1.0"
